--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
             </form>
           </div>
         </div>
-        <div id="background-image">
-          <img src="images/background.png" class="background" />
+        <div id="image-block">
+          <div class="background-container"></div>
+          <canvas id="canvas" width="665" height="800"></canvas>
         </div>
       </div>
     </section>
