Added conditional options to from

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <img src="images/logo.png" class="logo" />
       </div>
     </header>
-
+    <!-- form section  -->
     <section id="main-box">
       <div class="container">
         <div class="form-container">
@@ -25,20 +25,17 @@
               <input id="plantButton" type="button" value="Submit" />
               <div></div>
               <label>Water a Plant</label>
-              <select
-                class="input-forms"
-                name="neighbourhood"
-                id="neighbourhood"
-              >
-                <option value="option1">Option1</option>
-                <option value="option2">Option2</option>
-                <option value="option3">Option3</option>
+              <select class="input-forms" name="water" id="water">
+                <!-- <option value="waterTomato">Water Tomato</option>
+                <option value="waterCorn">Water Corn</option>
+                <option value="waterSunflower">Water Sunflowers</option> -->
               </select>
               <input id="waterButton" type="button" value="Submit" />
               <div></div>
             </form>
           </div>
         </div>
+        <!-- canvas -->
         <div id="image-block">
           <div class="background-container"></div>
           <canvas id="canvas" width="665" height="800"></canvas>
