Updated addPlant function

--- a/index.html
+++ b/index.html
@@ -25,11 +25,7 @@
               <input id="plantButton" type="button" value="Submit" />
               <div></div>
               <label>Water a Plant</label>
-              <select class="input-forms" name="water" id="water">
-                <!-- <option value="waterTomato">Water Tomato</option>
-                <option value="waterCorn">Water Corn</option>
-                <option value="waterSunflower">Water Sunflowers</option> -->
-              </select>
+              <select class="input-forms" name="water" id="water"></select>
               <input id="waterButton" type="button" value="Submit" />
               <div></div>
             </form>
