--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
               <select class="input-forms" name="water" id="water"></select>
               <input id="waterButton" type="button" value="Submit" />
               <div></div>
+              <input id="playAgainButton" type="button" value="Play Again"
             </form>
           </div>
         </div>
